improve stage event data analyzing